--- a/src/app/video-room/video-room.component.scss
+++ b/src/app/video-room/video-room.component.scss
@@ -1005,6 +1005,36 @@ ion-fab-button.controller {
   display: flex;
 }
 
+.connection-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1003;
+  color: #fff;
+  font-size: 16px;
+  pointer-events: none;
+}
+
+.connection-spinner {
+  width: 40px;
+  height: 40px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-top-color: #fff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-bottom: 16px;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 .video-room-wrapper {
   width: 100%;
   height: 100%;
